--- a/frontend/src/app/core/modules/form-builder/components/form-admin/form-input/form-input.component.html
+++ b/frontend/src/app/core/modules/form-builder/components/form-admin/form-input/form-input.component.html
@@ -43,12 +43,8 @@
   <app-animation-hider *ngIf="isAdmin" [show]="showPanel">
     <div>
       <div class="input-panel input-panel-top">
-        <button mat-icon-button (click)="settings()">
-          <mat-icon>settings</mat-icon>
-        </button>
-        <button mat-icon-button class="text-danger" (click)="deleteInput()">
-          <mat-icon>delete</mat-icon>
-        </button>
+          <mat-icon role="button" (click)="settings()">settings</mat-icon>
+          <mat-icon class="text-danger" role="button" (click)="deleteInput()">delete</mat-icon>
       </div>
       <div class="input-panel input-panel-left">
         <button mat-icon-button [matMenuTriggerFor]="appMenu" [matMenuTriggerData]="{position: 'left'}">
