--- a/frontend/src/app/plugins/modules/form/pages/form-admin/form-admin.component.html
+++ b/frontend/src/app/plugins/modules/form/pages/form-admin/form-admin.component.html
@@ -1,1 +1,1 @@
-<app-form-builder [formData]="settings.form" (refresh)="refreshView()"></app-form-builder>
+<app-form-builder [formRawData] = "settings.form" (refresh)="refreshView()"></app-form-builder>
