--- a/frontend/src/app/plugins/modules/image/pages/image-admin/image-admin.component.html
+++ b/frontend/src/app/plugins/modules/image/pages/image-admin/image-admin.component.html
@@ -1,19 +1,10 @@
 <div class="card">
   <div class="card-body">
     <form [formGroup]="adminForm">
-      <div class="d-flex flex-md-row flex-wrap">
-        <div class="form-check">
-          <label class="form-check-label" for="image">
-            Obrázek
-          </label>
-          <div>
-            <button (click)="onClickAddImageButton()" mat-raised-button color="primary" class="my-2" id="image"><i
-              class="material-icons">photo</i>Vybrat obrázek
-            </button>
-          </div>
-          <div *ngIf="settings.imagePath">
-            <br>
-            <img height="65" src="{{settings.imagePath}}"><br>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="border border-inner">
+            <app-image-input [miniature]="true" [path]="settings.imagePath" (imagePath)="updateImage($event)"></app-image-input>
           </div>
         </div>
       </div>
