--- a/frontend/src/app/layout/components/layout/layout.component.html
+++ b/frontend/src/app/layout/components/layout/layout.component.html
@@ -5,6 +5,7 @@
   <app-hidder [showOn]="symfonyApiCallEvent.startSendLogin" [hideOn]="symfonyApiCallEvent.stopSendLogin">
     <mat-progress-bar class="progres-line" mode="indeterminate"></mat-progress-bar>
   </app-hidder>
+  <div class="container-fluid">
   <nav class="main-header navbar navbar-expand navbar-white navbar-light row">
     <div class="col-4">
       <!-- Left navbar links -->
@@ -104,45 +105,26 @@
           </div>
         </li>
         <li class="dropdown user user-menu">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-            <img
-              class="user-image"
-              ngxGravatar
-              [email]="'example@mail.com'"
-              size="30"
-            />
-            <span class="hidden-xs">{{userService.settings.fullName}}</span>
-          </a>
-          <ul class="dropdown-menu">
-            <!-- User image -->
-            <li class="user-header">
+          <div class="dropdown">
+            <a class="dropdown-toggle" href="#" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
               <img
+                class="user-image"
                 ngxGravatar
                 [email]="'example@mail.com'"
-                class="img-circle"
-                size="50"
+                size="30"
               />
-
-              <p>
-                Alexander Pierce - Web Developer
-                <small>Member since Nov. 2012</small>
-              </p>
-            </li>
-            <!-- Menu Footer-->
-            <li class="user-footer">
-              <div class="float-start">
-                <a href="#" class="btn btn-default btn-flat">Profile</a>
-              </div>
-              <div class="float-end">
-                <button (click)="logout()" class="btn btn-default btn-flat">Sign out</button>
-              </div>
-            </li>
-          </ul>
+              <span class="hidden-xs">{{userService.settings.fullName}}</span>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
+              <li><span (click)="logout()" role="button" class="dropdown-item" href="#"><mat-icon class="align-middle">logout</mat-icon> Odhlásit</span></li>
+            </ul>
+          </div>
         </li>
       </ul>
     </div>
 
   </nav>
+  </div>
   <!-- /.navbar -->
 
   <!-- Main Sidebar Container -->
