--- a/frontend/src/app/plugins/modules/video/components/video/video.component.html
+++ b/frontend/src/app/plugins/modules/video/components/video/video.component.html
@@ -1,6 +1,6 @@
 <div class="video-container" [style.height.px]="settings.height">
   <iframe *ngIf="settings.videoPath;else other_content" class="frame" scrolling="no"
-          [style]="disable ? 'overflow: hidden !important;pointer-events: none !important;' : ''"
+          [style]="(dragStatusService && dragStatusService.isDraggedResizedPlugin()) ? 'overflow: hidden !important;pointer-events: none !important;' : ''"
           [src]="getVideoUrl()">
   </iframe>
   <ng-template #other_content>
