--- a/frontend/src/app/plugins/components/plugin-dimension-admin/plugin-dimension-admin.component.html
+++ b/frontend/src/app/plugins/components/plugin-dimension-admin/plugin-dimension-admin.component.html
@@ -2,10 +2,22 @@
   <div class="card-body">
     <form [formGroup]="adminForm">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="border border-inner">
             <label for="video" class="form-label">Odsazení levé a pravé (px):</label>
             <input type="number" class="form-control" id="video" formControlName="horizontalMargin">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="border border-inner">
+            <label for="padding-top" class="form-label">Odsazení horní (px):</label>
+            <input type="number" class="form-control" id="padding-top" formControlName="paddingTop">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="border border-inner">
+            <label for="padding-bottom" class="form-label">Odsazení dolní (px):</label>
+            <input type="number" class="form-control" id="padding-bottom" formControlName="paddingBottom">
           </div>
         </div>
       </div>
