--- a/frontend/src/app/page/components/page-block/admin/block-dimension/block-dimension.component.html
+++ b/frontend/src/app/page/components/page-block/admin/block-dimension/block-dimension.component.html
@@ -1,18 +1,26 @@
 <div class="card">
   <div class="card-body">
     <form [formGroup]="adminForm">
-      <div class="col-md-4">
-        <div class="border-outer">
-          <div class="border border-inner">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="border-outer">
+            <div class="border border-inner">
               <label for="height" class="form-label">Výška prázdného bloku (px)</label>
               <input type="number" class="form-control" id="height" formControlName="height">
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4">
-        <div class="border border-inner">
-          <label for="padding-top" class="form-label">Odsazení horní (px):</label>
-          <input type="number" class="form-control" id="padding-top" formControlName="paddingTop">
+        <div class="col-md-4">
+          <div class="border border-inner">
+            <label for="padding-top" class="form-label">Odsazení horní (px):</label>
+            <input type="number" class="form-control" id="padding-top" formControlName="paddingTop">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="border border-inner">
+            <label for="padding-bottom" class="form-label">Odsazení dolní (px):</label>
+            <input type="number" class="form-control" id="padding-bottom" formControlName="paddingBottom">
+          </div>
         </div>
       </div>
     </form>
