--- a/frontend/src/app/public/components/grid-cell-item-public/grid-cell-item-public.component.html
+++ b/frontend/src/app/public/components/grid-cell-item-public/grid-cell-item-public.component.html
@@ -1,4 +1,4 @@
-<div class="cell-item" [class.is-row]="gridCellItem.row">
+<div class="cell-item" [class.is-row]="gridCellItem.row" [style]="getVerticalPadding()">
   <ng-container #content class="grid-cell-item-content">
   </ng-container>
   <app-grid-row-public class="row is-child" [row]="gridCellItem.row" *ngIf="gridCellItem.row"></app-grid-row-public>
