--- a/frontend/src/app/plugins/shared/components/admin-pages/link-admin/link-admin.component.html
+++ b/frontend/src/app/plugins/shared/components/admin-pages/link-admin/link-admin.component.html
@@ -5,7 +5,8 @@
         <div class="col-md-6">
           <div class="border border-inner">
             <label for="type" class="form-label">Typ odkazu:</label>
-            <select class="form-select" required id="type" formControlName="linkType">
+            <select class="form-select" id="type" formControlName="linkType">
+              <option selected [ngValue]="null">Vyberte Typ odkazu...</option>
               <option *ngFor="let item of linkType" [ngValue]="item.id">{{item.name}}</option>
             </select>
           </div>
