--- a/frontend/src/app/page/components/grid-row/grid-row.component.html
+++ b/frontend/src/app/page/components/grid-row/grid-row.component.html
@@ -18,10 +18,10 @@
       <div class="btn draganddrop menu-row">
         <strong>Řádka buňek</strong>
       </div>
-      <div class="btn draganddrop move-row">
+      <div title="Přesunout" class="btn draganddrop move-row">
         <i class="material-icons icon-move-cell-item">open_with</i>
       </div>
-      <div class="btn draganddrop" (click)="removeRow$.emit(true)">
+      <div title="Smazat" class="btn draganddrop" (click)="removeRow$.emit(true)">
         <i class="material-icons icon-remove">delete</i>
       </div>
     </div>
