--- a/frontend/src/app/page/components/grid-cell-item/grid-cell-item.component.html
+++ b/frontend/src/app/page/components/grid-cell-item/grid-cell-item.component.html
@@ -9,13 +9,13 @@
         <div class="btn draganddrop menu-cell-item">
           <strong>{{gridCellItem.row ? 'Vnořená řádka' : 'Prvek'}}</strong>
         </div>
-        <div class="btn draganddrop" (click)="openSettings()" *ngIf="!gridCellItem.row">
+        <div title="Nastavení" class="btn draganddrop" (click)="openSettings()" *ngIf="!gridCellItem.row">
           <i class="material-icons icon-settings">settings</i>
         </div>
-        <div class="btn draganddrop icon-move-cell">
+        <div title="Přesunout" class="btn draganddrop icon-move-cell">
           <i class="material-icons icon-move-cell-item">open_with</i>
         </div>
-        <div class="btn draganddrop" (click)="delete()">
+        <div title="Smazat" class="btn draganddrop" (click)="delete()">
           <i class="material-icons icon-remove">delete</i>
         </div>
       </div>
