--- a/frontend/src/app/page/components/grid-row/grid-row.component.css
+++ b/frontend/src/app/page/components/grid-row/grid-row.component.css
@@ -39,37 +39,14 @@ app-grid-cell {
   min-height: 20px;
 }
 
-.frameCover div.btn {
-  background-color: #262b33;
-  border-radius: 0;
-  border: 1px solid #d6d6d6;
-  font-size: 12px;
-  height: 25px;
-  margin-right: 1px;
-  outline: 1px solid #000000;
-  position: relative;
-  top: 1px;
-  width: 25px;
-  padding: 0;
-}
-
-.frameCover div.btn i {
-  color: white;
-  display: block;
-  font-size: 18px;
-  position: relative !important;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 .row-menu {
   width: 153px;
   position: absolute;
-  top: -27px;
+  top: -26px;
   right: -12px;
   z-index: 1;
   text-align: right;
+  padding-bottom: 10px;
 }
 
 .move-icon-row-container {
