--- a/frontend/src/app/page/components/page-block/page-block/page-block.component.css
+++ b/frontend/src/app/page/components/page-block/page-block/page-block.component.css
@@ -59,6 +59,13 @@
 ::ng-deep .palette .block-content-rows > .sortable-ghost *
 {
   display: none !important;
+  text-align: center;
+  margin: 0 auto;
+}
+
+::ng-deep.menu-element-item.sortable-ghost {
+  margin: 0px auto !important;
+  padding-top: 10px;
 }
 
 ::ng-deep .palette .block-content-rows > .block-row
@@ -96,16 +103,16 @@
 
 .new-row-input-button.empty {
   position: relative;
-  top: -15px;
+  top: -9px;
 }
 
 .new-row-up {
   width: 50%;
   position: absolute;
   text-align: left;
-  top: -16px;
+  top: -9px;
   height: 10px;
-  right: 15px;
+  right: 8px;
 }
 
 .new-row-center {
@@ -113,7 +120,7 @@
   position: absolute;
   text-align: left;
   height: 10px;
-  right: 15px;
+  right: 11px;
   top: 50%;
 }
 
@@ -121,14 +128,14 @@
   width: 50%;
   position: absolute;
   text-align: left;
-  bottom: 6px;
+  bottom: 0px;
   height: 10px;
-  right: 15px;
+  right: 8px;
 }
 
 .new-row-up > button, .new-row-center > button, .new-row-bottom > button {
-  width: 30px;
-  height: 30px;
+  width: 22px;
+  height: 22px;
   padding: 6px 0;
 }
 
@@ -171,12 +178,6 @@
   width: 100%;
 }
 
-/*.video-container iframe {*/
-/*  position: absolute;*/
-/*  top: 50%;*/
-/*  left: 50%;*/
-/*  width: 100%;*/
-/*  height: 100%;*/
-/*  transform: translate(-50%, -50%);*/
-/*  pointer-events: none;*/
-/*}*/
+.hider-new-row-button mat-icon {
+  font-size: 15px !important;
+}
