--- a/frontend/src/app/authorization/components/registration/registration.component.html
+++ b/frontend/src/app/authorization/components/registration/registration.component.html
@@ -1,62 +1,51 @@
-<p *ngIf="activationSend">
-  Registrace proběhla úspěšně, na email vám byl zaslán odkaz pro aktivaci vašeho nového účtu.
-</p>
-<form *ngIf="!activationSend" [formGroup]="registrationForm">
-  <div appFormError class="form-group">
-    <div #errorFormContainer class="input-group">
-      <input type="text" class="form-control" placeholder="Celé jméno" formControlName="fullName">
-      <div class="input-group-append">
-        <div class="input-group-text">
-          <span class="fas fa-user"></span>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div appFormError class="form-group">
-    <div #errorFormContainer class="input-group">
-      <input type="email" class="form-control" placeholder="Email" formControlName="email">
-      <div class="input-group-append">
-        <div class="input-group-text">
-          <span class="fas fa-envelope"></span>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div formGroupName="password">
+<p class="login-box-msg">Registrace do systému</p>
+<div class="social-auth-links text-center">
+  <p *ngIf="activationSend">
+    Registrace proběhla úspěšně, na email vám byl zaslán odkaz pro aktivaci vašeho nového účtu.
+  </p>
+  <form *ngIf="!activationSend" [formGroup]="registrationForm">
     <div appFormError class="form-group">
-      <div #errorFormContainer class="input-group">
-        <input type="password" class="form-control" placeholder="Heslo" formControlName="first">
-        <div class="input-group-append">
+      <div #errorFormContainer class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Celé jméno" formControlName="fullName">
           <div class="input-group-text">
-            <span class="fas fa-lock"></span>
+            <span class="fas fa-user"></span>
           </div>
-        </div>
       </div>
     </div>
     <div appFormError class="form-group">
-      <div #errorFormContainer class="input-group">
-        <input type="password" class="form-control" placeholder="Heslo znovu" formControlName="second">
-        <div class="input-group-append">
+      <div #errorFormContainer class="input-group mb-3">
+        <input type="email" class="form-control" placeholder="Email" formControlName="email">
           <div class="input-group-text">
-            <span class="fas fa-lock"></span>
+            <span class="fas fa-envelope"></span>
           </div>
+        </div>
+    </div>
+    <div formGroupName="password">
+      <div appFormError class="form-group">
+        <div #errorFormContainer class="input-group mb-3">
+          <input type="password" class="form-control" placeholder="Heslo" formControlName="first">
+            <div class="input-group-text">
+              <span class="fas fa-lock"></span>
+            </div>
+        </div>
+      </div>
+      <div appFormError class="form-group">
+        <div #errorFormContainer class="input-group mb-3">
+          <input type="password" class="form-control" placeholder="Heslo znovu" formControlName="second">
+            <div class="input-group-text">
+              <span class="fas fa-lock"></span>
+            </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-8">
-      <div class="icheck-primary">
-        <input type="checkbox" id="agreeTerms" name="terms" value="agree">
-        <label for="agreeTerms">
-          I agree to the <a href="#">terms</a>
-        </label>
+    <div class="form-group">
+      <!-- /.col -->
+      <div class="d-flex flex-row-reverse">
+        <button type="submit" class="btn btn-primary btn-block">Vytvořit účet</button>
       </div>
+      <!-- /.col -->
     </div>
-    <!-- /.col -->
-    <div class="col-4">
-      <button type="submit" class="btn btn-primary btn-block">Zaregistrovat</button>
-    </div>
-    <!-- /.col -->
-  </div>
-</form>
+  </form>
+  <br>
+  <a [routerLink]="['../login']" class="text-center">Přihlásit se</a>
+</div>
