--- a/frontend/src/app/authorization/components/login/login.component.html
+++ b/frontend/src/app/authorization/components/login/login.component.html
@@ -34,7 +34,7 @@
   </form>
   <p>- NEBO -</p>
   <div class="d-grid gap-2">
-    <div href="#" class="btn btn-block btn-primary">
+    <div class="btn btn-block btn-primary" (click)="socialLoginService.loginFacebook()">
       <i class="fab fa-facebook mr-2"></i>
       Přihlásit přes Facebook
     </div>
